--- a/uboat/uboat.html
+++ b/uboat/uboat.html
@@ -33,7 +33,7 @@
       <ul class="index_middle">
         
       </ul>
-      <p class="log" style="color: #fff;"></p>
+      <!-- <p class="log" style="color: #fff;">日志</p> -->
       <a class="clear_log" style="color: #fff; text-align: center; text-decoration: none;" href="javascript:;">清空历史记录</a>
       <footer class="index_bottom">
         <h2 class="index_bottom_title">总计</h2>
