--- a/uboat/uboat.html
+++ b/uboat/uboat.html
@@ -13,7 +13,7 @@
 			  background-color: transparent;
 			}
 		</style>
-    <script type="text/javascript" src="https://act.diemoe.net/overlays/common/common.min.js"></script>
+    <script type="text/javascript" src="https://overlayplugin.github.io/OverlayPlugin/assets/shared/common.min.js"></script>
 		<script src="dayjs.min.js"></script>
     <script src="customParseFormat.js"></script>
     <script src="jquery-3.6.0.min.js"></script>
