--- a/uboat/uboat.html
+++ b/uboat/uboat.html
@@ -17,7 +17,7 @@
 		<script src="dayjs.min.js"></script>
     <script src="customParseFormat.js"></script>
     <script src="jquery-3.6.0.min.js"></script>
-		<script defer="defer" src="uboat.bundle.js"></script>
+		<script defer="defer" src="uboat.bundle.js?v=100000"></script>
 		<link href="uboat.css" rel="stylesheet">
 	</head>
 	<body>
